--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,38 +4,27 @@ import Card from '../components/Card.astro';
 ---
 
 <Layout title="Welcome to Astro.">
-	<main>
-		<h1>Welcome to <span class="text-gradient">Astro</span></h1>
-		<p class="instructions">
-			To get started, open the directory <code>src/pages</code> in your project.<br />
-			<strong>Code Challenge:</strong> Tweak the "Welcome to Astro" message above.
-		</p>
-		<ul role="list" class="link-card-grid">
-			<Card
-				href="https://docs.astro.build/"
-				title="Documentation"
-				body="Learn how Astro works and explore the official API docs."
-			/>
-			<Card
-				href="https://astro.build/integrations/"
-				title="Integrations"
-				body="Supercharge your project with new frameworks and libraries."
-			/>
-			<Card
-				href="https://astro.build/themes/"
-				title="Themes"
-				body="Explore a galaxy of community-built starter themes."
-			/>
-			<Card
-				href="https://astro.build/chat/"
-				title="Community"
-				body="Come say hi to our amazing Discord community. ❤️"
-			/>
-		</ul>
+	<main slot="main-content">
+		<div class="hero min-h-screen" style="background-image: url(/car-road.jpeg);">
+			<div class="hero-overlay bg-opacity-60"></div>
+			<div class="hero-content text-center text-neutral-content">
+				<div class="max-w-2xl">
+					<h1 class="text-5xl font-bold uppercase">Adventure is calling</h1>
+					<div class="h-52" />
+					<p class="pt-32 text-2xl font-semibold">
+						But unexpected repair costs can stop you from answering the call of the open road.
+					</p>
+					<p class="pt-4 text-2xl font-semibold">
+						Don't worry - we've got you covered.
+					</p>
+					<a role="button" href="/form" class="mt-4 btn btn-primary btn-wide text-xl">Instant Quote</a>
+				</div>
+			</div>
+		</div>
 	</main>
 </Layout>
 
-<style>
+<!-- <style>
 	main {
 		margin: auto;
 		padding: 1.5rem;
@@ -78,4 +67,4 @@ import Card from '../components/Card.astro';
 		gap: 1rem;
 		padding: 0;
 	}
-</style>
+</style> -->
