--- a/src/pages/quote.astro
+++ b/src/pages/quote.astro
@@ -6,11 +6,10 @@ import StatCard from '../components/StatCard.astro';
 
 ---
 <Layout title="Form">
-	<main slot="main-content">
     <div class="hero min-h-screen bg-base-200">
       <div class="hero-content text-center max-w-xl">
         <div class="">
-          <h1 class="text-5xl font-bold">Your quote is ready</h1>
+          <h1 class="text-4xl md:text-5xl font-bold">Your quote is ready</h1>
           <p class="py-6">
             Congratulations! Your vehicle is eligible for additional coverage.  You can review and accept your quote below.
           </p>
@@ -36,10 +35,9 @@ import StatCard from '../components/StatCard.astro';
             
           </div>
           <div class="py-6">
-          <button class="btn btn-primary btn-wide">Review Quote</button>
+          <button class="btn btn-primary btn-block max-w-md">Review Quote</button>
         </div>
         </div>
       </div>
     </div>
-	</main>
 </Layout>
