--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -16,7 +16,10 @@ const { title } = Astro.props;
 		<title>{title}</title>
 	</head>
 	<body>
-		<slot name="main-content" />
+		<main class="flex flex-col items-center">
+			<slot />
+		</main>
+		
 	</body>
 </html>
 <style is:global>
