Auto-redirect for quote summary

--- a/src/pages/loading.astro
+++ b/src/pages/loading.astro
@@ -3,7 +3,7 @@ import Layout from '../layouts/Layout.astro';
 import StatCard from '../components/StatCard.astro';
 
 ---
-<!-- <meta http-equiv="refresh" content="4;url=/quote" /> -->
+<meta http-equiv="refresh" content="6;url=/quote" />
 <Layout title="Loading">
     <progress class="progress w-screen"></progress>
     <div class="m-auto max-w-lg p-4">
