--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -16,7 +16,9 @@ const { title } = Astro.props;
     <title>{title}</title>
   </head>
   <body>
-    <main class="flex flex-col items-center justify-center h-screen">
+    <main
+      class="flex flex-col items-center justify-center h-screen bg-base-200 gap-4"
+    >
       <slot />
     </main>
   </body>
@@ -24,14 +26,33 @@ const { title } = Astro.props;
 <style is:global>
   :root {
     --accent: 124, 58, 237;
-    --accent-gradient: linear-gradient(45deg, rgb(var(--accent)), #da62c4 30%, white 60%);
+    --accent-gradient: linear-gradient(
+      45deg,
+      rgb(var(--accent)),
+      #da62c4 30%,
+      white 60%
+    );
   }
   html {
     font-family: system-ui, sans-serif;
     background-color: #f6f6f6;
   }
   code {
-    font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-      Bitstream Vera Sans Mono, Courier New, monospace;
+    font-family: Menlo, Monaco, Lucida Console, Liberation Mono,
+      DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New, monospace;
+  }
+  .clickable {
+    animation: button-pop var(--animation-btn, 0.25s) ease-out;
+    transition-property: color, background-color, border-color,
+      text-decoration-color, fill, stroke, opacity, box-shadow, transform,
+      filter, backdrop-filter, -webkit-text-decoration-color,
+      -webkit-backdrop-filter;
+    transition-duration: 0.2s;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .clickable:active:focus,
+  .clickable:active:hover {
+    animation: none;
+    transform: scale(var(--btn-focus-scale, 0.95));
   }
 </style>
