--- a/src/pages/form.astro
+++ b/src/pages/form.astro
@@ -1,27 +1,22 @@
 ---
-import Layout from '../layouts/Layout.astro';
-import Card from '../components/Card.astro';
-import { Form } from '../components/Form';
+import Layout from "../layouts/Layout.astro";
+import Card from "../components/Card.astro";
+import { Form } from "../components/Form";
 ---
 
 <Layout title="Form">
-  <div class="max-w-lg pt-16 px-4">
-		<h1 class="h-10 text-3xl font-bold">Get your instant quote</h1>
-		<p class="prose">
-			Please provide the following information to for an <strong>instant</strong> quote.
-      We won't use your information for any additional marketing, we promise.
-		</p>
-    <div class="divider" />
-
+  <div class="max-w-lg pt-6 px-8 bg-base-100 rounded-lg overflow-hidden">
+    <h1 class="h-10 text-3xl font-bold">Get your instant quote</h1>
+    <p class="prose">
+      Please provide the following information to for an <strong>instant</strong
+      > quote. We won't use your information for any additional marketing, we promise.
+    </p>
+    <div class="divider"></div>
+    <Form client:load />
   </div>
 
-    <div class="max-w-lg">
-      <Form client:load />
-    </div>
-
+  <!-- <div class="max-w-lg bg-base-100 rounded-lg"></div> -->
 </Layout>
-
-
 
 <!-- <div class="hero min-h-screen bg-base-200">
   <div class="hero-content flex-col lg:flex-row-reverse">
